syntax = "proto3";
package chainlink.cosmos.reportingplugin.median.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "../median";

message MedianObservation {
  option (gogoproto.equal) = true;

  int64 timestamp = 1;
  bytes value = 2;
}
