syntax = "proto3";
package chainlink.cosmos.reportingplugin.median.v1beta1;

option go_package = "../median";

message MedianPluginConfig {
  uint64 alpha_ppb = 1;
  uint64 delta_c = 2;
}
